--- a/index.ipynb
+++ b/index.ipynb
@@ -1,1 +1,172 @@
-{"cells": [{"cell_type": "markdown", "metadata": {}, "source": ["# The Monty Hall Problem\n", "\n", "## Introduction\n", "\n", "The Monty Hall problem is a famous little puzzle from a game show. It goes like this: you are presented with 3 doors. Behind two are goats and behind the third is a car. You are asked to select a door; if you select the door with the car, you win! After selecting, the host then opens one of the remaining two doors, revealing a goat. The host then asks if you would like to switch doors or stick with your original choice. What would you do? Does it matter?\n", "\n", "<img src=\"images/Image_58_MontyHall.png\">\n", "\n", "## Objectives\n", "\n", "You will be able to:\n", "* Solve the monty hall problem using simulations"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Run a Simulation\n", "\n", "This is not a traditional application of Bayes' Theorem, so trying to formulate the problem as such is tricky at best. That said, the scenario does capture the motivating conception behind Bayesian statistics: updating our beliefs in the face of additional evidence. With this, you'll employ another frequently used tool of Bayesian's&mdash;running a simulation. To do this, generate a random integer between one and three to represent the door hiding the car. Then, generate a second integer between one and three representing the player's selection. Then, of those the contestant did not choose, select a door concealing a goat to reveal. Record the results of the simulated game if they changed versus if they did not. Repeat this process a thousand (or more) times. Finally, plot the results of your simulation as a line graph. The x-axis should be the number of simulations, and the y-axis should be the probability of winning. (There should be two lines on the graph, one for switching doors, and the other for keeping the original selection.)"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["#Your code here"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Summary\n", "\n", "In this lab, you further investigated the idea of Bayes' Theorem and Bayesian statistics in general through the Monty Hall problem. Hopefully, this was an entertaining little experience! "]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.7.3"}}, "nbformat": 4, "nbformat_minor": 2}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The Monty Hall Problem\n",
+    "\n",
+    "## Introduction\n",
+    "\n",
+    "The Monty Hall problem is a famous little puzzle from a game show. It goes like this: you are presented with 3 doors. Behind two are goats and behind the third is a car. You are asked to select a door; if you select the door with the car, you win! After selecting, the host then opens one of the remaining two doors, revealing a goat. The host then asks if you would like to switch doors or stick with your original choice. What would you do? Does it matter?\n",
+    "\n",
+    "<img src=\"images/Image_58_MontyHall.png\">\n",
+    "\n",
+    "## Objectives\n",
+    "\n",
+    "You will be able to:\n",
+    "* Solve the monty hall problem using simulations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run a Simulation\n",
+    "\n",
+    "This is not a traditional application of Bayes' Theorem, so trying to formulate the problem as such is tricky at best. That said, the scenario does capture the motivating conception behind Bayesian statistics: updating our beliefs in the face of additional evidence. With this, you'll employ another frequently used tool of Bayesian's&mdash;running a simulation. To do this, generate a random integer between one and three to represent the door hiding the car. Then, generate a second integer between one and three representing the player's selection. Then, of those the contestant did not choose, select a door concealing a goat to reveal. Record the results of the simulated game if they changed versus if they did not. Repeat this process a thousand (or more) times. Finally, plot the results of your simulation as a line graph. The x-axis should be the number of simulations, and the y-axis should be the probability of winning. (There should be two lines on the graph, one for switching doors, and the other for keeping the original selection.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Your code here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Car Location: [1]\n",
+      "Players Choice: {1}\n",
+      "Host Opens: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#generate random integer to represent the door hiding the car\n",
+    "import random\n",
+    "all_doors = [1,2,3]\n",
+    "\n",
+    "#Step 1: Car is placed behind a random door\n",
+    "car_loc = [random.randint(1,3)]\n",
+    "print('Car Location: ' + str(car_loc))\n",
+    "\n",
+    "#Step 2: Player selects a door\n",
+    "player_choice = set([random.randint(1,3)])\n",
+    "print('Player''s Choice: '+ str(player_choice))\n",
+    "\n",
+    "#Step 3: Host selects a door revealing a goat that's \n",
+    "#not the player's door\n",
+    "goat_locs = list(set(car_loc)^set(all_doors))\n",
+    "\n",
+    "if not player_choice.issubset(set(goat_loc)):\n",
+    "\n",
+    "    reveal_idx = random.randint(0,1)\n",
+    "    reveal_loc = goat_locs[reveal_idx]\n",
+    "    print('Host Opens: ' + str(reveal_loc))\n",
+    "\n",
+    "other_goat_idx = list(set([reveal_idx])^set([0,1]))[0]\n",
+    "remaining = goat_loc[other_goat_idx]\n",
+    "\n",
+    "\n",
+    "#\n",
+    "#\n",
+    "#player either switches or stays\n",
+    "\n",
+    "\n",
+    "# #player doesn't switch\n",
+    "# if player_choice == car_loc[0]:\n",
+    "#     no_switch_win = 1\n",
+    "# else:\n",
+    "#     no_switch_win = 0\n",
+    "    \n",
+    "# #player switches\n",
+    "# new_choices = [car_loc,other_goat_loc]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#remaining choices after a goat is revealed\n",
+    "a = set([1])\n",
+    "b = set([1])\n",
+    "\n",
+    "a.issubset(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n",
+      "3\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(car_loc)\n",
+    "print(reveal_loc)\n",
+    "print(remaining)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "\n",
+    "In this lab, you further investigated the idea of Bayes' Theorem and Bayesian statistics in general through the Monty Hall problem. Hopefully, this was an entertaining little experience! "
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.9"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
