Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "#generate random integer to represent the door hiding the car\n",
     "import random\n",
-    "all_doors = [1,2,3]\n",
+    "all_doors = set([1,2,3])\n",
     "\n",
     "#Step 1: Car is placed behind a random door\n",
     "car_loc = [random.randint(1,3)]\n",
@@ -68,11 +68,22 @@
     "#not the player's door\n",
     "goat_locs = list(set(car_loc)^set(all_doors))\n",
     "\n",
-    "if not player_choice.issubset(set(goat_loc)):\n",
-    "\n",
+    "if player_choice.issubset(set(car_loc)):\n",
+    "    #pick either of the goat doors if the player chose the car\n",
     "    reveal_idx = random.randint(0,1)\n",
     "    reveal_loc = goat_locs[reveal_idx]\n",
+    "    \n",
+    "else:\n",
+    "    #pick the door that the player didn't choose and the one that is not the car\n",
+    "    remaining_door = \n",
+    "    \n",
     "    print('Host Opens: ' + str(reveal_loc))\n",
+    "\n",
+    "    \n",
+    "\n",
+    "if not player_choice.issubset(set(goat_loc)):\n",
+    "\n",
+    "\n",
     "\n",
     "other_goat_idx = list(set([reveal_idx])^set([0,1]))[0]\n",
     "remaining = goat_loc[other_goat_idx]\n",
