--- a/index.ipynb
+++ b/index.ipynb
@@ -75,7 +75,7 @@
     "    \n",
     "else:\n",
     "    #pick the door that the player didn't choose and the one that is not the car\n",
-    "    remaining_door = all_doors^(player_choice)\n",
+    "    remaining_door = all_doors^(player_choice.union())\n",
     "    \n",
     "    print('Host Opens: ' + str(reveal_loc))\n",
     "\n",
