Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -38,16 +38,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Car Location: [1]\n",
-      "Players Choice: {1}\n",
-      "Host Opens: 3\n"
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-2-f6f0ee3466f4>, line 34)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-f6f0ee3466f4>\"\u001b[0;36m, line \u001b[0;32m34\u001b[0m\n\u001b[0;31m    other_goat_idx = list(set([reveal_idx])^set([0,1]))[0]\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
@@ -75,7 +74,7 @@
     "    \n",
     "else:\n",
     "    #pick the door that the player didn't choose and the one that is not the car\n",
-    "    remaining_door = all_doors^(player_choice.union(set(car_loc)))\n",
+    "    reveal_loc = all_doors^(player_choice.union(set(car_loc)))\n",
     "    \n",
     "    print('Host Opens: ' + str(reveal_loc))\n",
     "\n",
