Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -38,15 +38,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-2-f6f0ee3466f4>, line 34)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-f6f0ee3466f4>\"\u001b[0;36m, line \u001b[0;32m34\u001b[0m\n\u001b[0;31m    other_goat_idx = list(set([reveal_idx])^set([0,1]))[0]\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Car Location: [3]\n",
+      "Players Choice: {1}\n",
+      "Host Opens: {2}\n"
      ]
     }
    ],
@@ -76,16 +77,8 @@
     "    #pick the door that the player didn't choose and the one that is not the car\n",
     "    reveal_loc = all_doors^(player_choice.union(set(car_loc)))\n",
     "    \n",
-    "    print('Host Opens: ' + str(reveal_loc))\n",
+    "print('Host Opens: ' + str(reveal_loc))\n",
     "\n",
-    "    \n",
-    "\n",
-    "if not player_choice.issubset(set(goat_loc)):\n",
-    "\n",
-    "\n",
-    "\n",
-    "other_goat_idx = list(set([reveal_idx])^set([0,1]))[0]\n",
-    "remaining = goat_loc[other_goat_idx]\n",
     "\n",
     "\n",
     "#\n",
