Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -80,20 +80,7 @@
     "print('Host Opens: ' + str(reveal_loc))\n",
     "\n",
     "\n",
-    "\n",
-    "#\n",
-    "#\n",
-    "#player either switches or stays\n",
-    "\n",
-    "\n",
-    "# #player doesn't switch\n",
-    "# if player_choice == car_loc[0]:\n",
-    "#     no_switch_win = 1\n",
-    "# else:\n",
-    "#     no_switch_win = 0\n",
-    "    \n",
-    "# #player switches\n",
-    "# new_choices = [car_loc,other_goat_loc]\n"
+    "#Step 4\n"
    ]
   },
   {
