--- a/index.ipynb
+++ b/index.ipynb
@@ -80,7 +80,8 @@
     "print('Host Opens: ' + str(reveal_loc))\n",
     "\n",
     "\n",
-    "#Step 4: Host gives player option to stay or \n"
+    "#Step 4: Host gives player option to stay or switch doors\n",
+    "\n"
    ]
   },
   {
