--- a/index.ipynb
+++ b/index.ipynb
@@ -81,7 +81,7 @@
     "\n",
     "\n",
     "#Step 4: Host gives player option to stay or switch doors\n",
-    "\n"
+    "#Step 4a: player \n"
    ]
   },
   {
