Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,7 +81,8 @@
     "\n",
     "\n",
     "#Step 4: Host gives player option to stay or switch doors\n",
-    "#Step 4a: player \n"
+    "#Step 4a: player switches\n",
+    "switch_\n"
    ]
   },
   {
