--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,8 @@
     "\n",
     "#Step 4: Host gives player option to stay or switch doors\n",
     "#Step 4a: player switches\n",
-    "switch_\n"
+    "if \n",
+    "switch_win \n"
    ]
   },
   {
