--- a/index.ipynb
+++ b/index.ipynb
@@ -81,7 +81,8 @@
     "\n",
     "\n",
     "#Step 4: Host gives player option to stay or switch doors\n",
-    "#Step 4a: player \n",
+    "#Step 4a: player stays\n",
+    "if player_choice\n",
     "#Step 4b: player switches\n",
     "if \n",
     "switch_win \n"
