--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,8 @@
     "\n",
     "#Step 4: Host gives player option to stay or switch doors\n",
     "#Step 4a: player stays\n",
-    "if player_choice\n",
+    "if player_choice.issubset(set(car_loc)):\n",
+    "    \n",
     "#Step 4b: player switches\n",
     "if \n",
     "switch_win \n"
