Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -83,7 +83,7 @@
     "#Step 4: Host gives player option to stay or switch doors\n",
     "#Step 4a: player stays\n",
     "if player_choice.issubset(set(car_loc)):\n",
-    "    \n",
+    "    stay_win = 1\n",
     "#Step 4b: player switches\n",
     "if \n",
     "switch_win \n"
