--- a/index.ipynb
+++ b/index.ipynb
@@ -86,6 +86,7 @@
     "    stay_win = 1\n",
     "    \n",
     "#Step 4b: player switches\n",
+    "new_player_choice = \n",
     "\n",
     "if \n",
     "switch_win \n"
