Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -89,7 +89,7 @@
     "new_player_choice = \n",
     "\n",
     "if \n",
-    "switch_win \n"
+    "new_player_choice.issubset(set(car_loc)): \n"
    ]
   },
   {
