Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -88,8 +88,9 @@
     "#Step 4b: player switches\n",
     "new_player_choice = \n",
     "\n",
-    "if \n",
-    "new_player_choice.issubset(set(car_loc)): \n"
+    "if new_player_choice.issubset(set(car_loc)):\n",
+    "    switch_win\n",
+    "    \n"
    ]
   },
   {
