Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -84,6 +84,8 @@
     "#Step 4a: player stays\n",
     "if player_choice.issubset(set(car_loc)):\n",
     "    stay_win = 1\n",
+    "else:\n",
+    "    stay_w\n",
     "    \n",
     "#Step 4b: player switches\n",
     "new_player_choice = \n",
