Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -85,13 +85,13 @@
     "if player_choice.issubset(set(car_loc)):\n",
     "    stay_win = 1\n",
     "else:\n",
-    "    stay_w\n",
+    "    stay_win = 0\n",
     "    \n",
     "#Step 4b: player switches\n",
     "new_player_choice = \n",
     "\n",
     "if new_player_choice.issubset(set(car_loc)):\n",
-    "    switch_win\n",
+    "    switch_win = 1\n",
     "    \n"
    ]
   },
