Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -92,6 +92,8 @@
     "\n",
     "if new_player_choice.issubset(set(car_loc)):\n",
     "    switch_win = 1\n",
+    "else:\n",
+    "    stay_win = 0\n",
     "    \n"
    ]
   },
