--- a/index.ipynb
+++ b/index.ipynb
@@ -88,13 +88,13 @@
     "    stay_win = 0\n",
     "    \n",
     "#Step 4b: player switches\n",
-    "new_player_choice = all_doors^(player_choice.union(reaveal_loc)\n",
+    "new_player_choice = all_doors^(player_choice.union(reaveal_loc))\n",
     "\n",
     "if new_player_choice.issubset(set(car_loc)):\n",
     "    switch_win = 1\n",
     "else:\n",
     "    stay_win = 0\n",
-    "    \n"
+    "    "
    ]
   },
   {
