--- a/index.ipynb
+++ b/index.ipynb
@@ -89,12 +89,13 @@
     "    \n",
     "#Step 4b: player switches\n",
     "new_player_choice = all_doors^(player_choice.union(reaveal_loc))\n",
-    "print()\n",
+    "\n",
     "if new_player_choice.issubset(set(car_loc)):\n",
     "    switch_win = 1\n",
     "else:\n",
     "    stay_win = 0\n",
-    "    \n"
+    "    \n",
+    "print(ne)"
    ]
   },
   {
