Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -95,7 +95,7 @@
     "else:\n",
     "    stay_win = 0\n",
     "    \n",
-    "print('Player Switched')"
+    "print('New Player Choice: '')"
    ]
   },
   {
