Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -95,7 +95,8 @@
     "else:\n",
     "    stay_win = 0\n",
     "    \n",
-    "print('New Player Choice: '')"
+    "print('New Player Choice: ' + new_player_choice)\n",
+    "print('')"
    ]
   },
   {
