Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -96,6 +96,7 @@
     "    stay_win = 0\n",
     "    \n",
     "print('New Player Choice: ' + new_player_choice)\n",
+    "print('Outcome Stayed: ' + stay_win)\n",
     "print('Outcome Stayed: ' + stay_win)"
    ]
   },
