--- a/index.ipynb
+++ b/index.ipynb
@@ -93,11 +93,11 @@
     "if new_player_choice.issubset(set(car_loc)):\n",
     "    switch_win = 1\n",
     "else:\n",
-    "    stay_win = 0\n",
+    "    switch_win = 0\n",
     "    \n",
     "print('New Player Choice: ' + new_player_choice)\n",
     "print('Outcome Stayed: ' + stay_win)\n",
-    "print('Outcome Stayed: ' + stay_win)"
+    "print('Outcome Switched: ' + stay_win)"
    ]
   },
   {
