Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -38,27 +38,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Car Location: [1]\n",
-      "Players Choice: {3}\n",
-      "Host Opens: {2}\n"
+      "Car Location: [3]\n",
+      "Players Choice: {2}\n",
+      "Host Opens: {1}\n",
+      "New Player Choice: {3}\n"
      ]
     },
     {
      "ename": "TypeError",
-     "evalue": "must be str, not set",
+     "evalue": "must be str, not int",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-80674a339ff4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     42\u001b[0m     \u001b[0mswitch_win\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'New Player Choice: '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnew_player_choice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Outcome Stayed: '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstay_win\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Outcome Switched: '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mswitch_win\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: must be str, not set"
+      "\u001b[0;32m<ipython-input-9-14f107688a14>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'New Player Choice: '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_player_choice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Outcome Stayed: '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstay_win\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Outcome Switched: '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mswitch_win\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: must be str, not int"
      ]
     }
    ],
@@ -106,7 +107,7 @@
     "else:\n",
     "    switch_win = 0\n",
     "    \n",
-    "print('New Player Choice: ' + new_player_choice)\n",
+    "print('New Player Choice: ' + str(new_player_choice))\n",
     "print('Outcome Stayed: ' + stay_win)\n",
     "print('Outcome Switched: ' + switch_win)"
    ]
