--- a/index.ipynb
+++ b/index.ipynb
@@ -108,7 +108,7 @@
     "    switch_win = 0\n",
     "    \n",
     "print('New Player Choice: ' + str(new_player_choice))\n",
-    "print('Outcome Stayed: ' + stay_win)\n",
+    "print('Outcome Stayed: ' + str(stay_win))\n",
     "print('Outcome Switched: ' + switch_win)"
    ]
   },
