--- a/index.ipynb
+++ b/index.ipynb
@@ -100,6 +100,7 @@
     "    \n",
     "#Step 4b: player switches\n",
     "new_player_choice = all_doors^(player_choice.union(reveal_loc))\n",
+    "print(new_l)\n",
     "\n",
     "if new_player_choice.issubset(set(car_loc)):\n",
     "    switch_win = 1\n",
