Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -38,18 +38,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Car Location: [2]\n",
-      "Players Choice: {1}\n",
-      "Host Opens: {3}\n",
-      "{2}\n",
-      "New Player Choice: {2}\n",
+      "Car Location: [1]\n",
+      "Players Choice: {3}\n",
+      "Host Opens: {2}\n",
+      "New Player Choice: {1}\n",
       "Outcome Stayed: 0\n",
       "Outcome Switched: 1\n"
      ]
@@ -93,7 +92,7 @@
     "    \n",
     "#Step 4b: player switches\n",
     "new_player_choice = all_doors^(player_choice.union(reveal_loc))\n",
-    "print(new_player_choice)\n",
+    "#print(new_player_choice)\n",
     "\n",
     "if new_player_choice.issubset(set(car_loc)):\n",
     "    switch_win = 1\n",
