--- a/index.ipynb
+++ b/index.ipynb
@@ -59,6 +59,7 @@
     "import random\n",
     "all_doors = set([1,2,3])\n",
     "\n",
+    "def mon\n",
     "#Step 1: Car is placed behind a random door\n",
     "car_loc = [random.randint(1,3)]\n",
     "print('Car Location: ' + str(car_loc))\n",
