--- a/index.ipynb
+++ b/index.ipynb
@@ -99,7 +99,7 @@
     "        switch_win = 1\n",
     "    else:\n",
     "        switch_win = 0\n",
-    "    return \n",
+    "    return stay_switch_win\n",
     "\n",
     "    print('New Player Choice: ' + str(new_player_choice))\n",
     "    print('Outcome Stayed: ' + str(stay_win))\n",
