Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -99,11 +99,12 @@
     "        switch_win = 1\n",
     "    else:\n",
     "        switch_win = 0\n",
-    "    return stay_win, switch_win\n",
-    "\n",
-    "    print('New Player Choice: ' + str(new_player_choice))\n",
+    "        \n",
+    "print('New Player Choice: ' + str(new_player_choice))\n",
     "    print('Outcome Stayed: ' + str(stay_win))\n",
-    "    print('Outcome Switched: ' + str(switch_win))"
+    "    print('Outcome Switched: ' + str(switch_win))    \n",
+    "    return stay_win, switch_win\n",
+    "\n"
    ]
   },
   {
