--- a/index.ipynb
+++ b/index.ipynb
@@ -114,7 +114,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "\n",
+    "iters = range()\n",
     "df = pd.DataFrame()\n"
    ]
   },
