Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -97,24 +97,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{2, 3}"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "iters = range()\n",
+    "iters = list(range(1001))\n",
     "df = pd.DataFrame()\n"
    ]
   },
