Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -97,14 +97,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "iters = list(range(1001))\n",
-    "df = pd.DataFrame()\n"
+    "df = pd.DataFrame(iters)\n"
    ]
   },
   {
@@ -122,7 +122,9 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
