Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -97,15 +97,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1001"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "iters = list(range(1001))\n",
+    "iters = list(range(1000))\n",
     "df = pd.DataFrame(iters)\n",
-    "len"
+    "len(iters)"
    ]
   },
   {
