Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -97,16 +97,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1001"
+       "1000"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,8 +115,7 @@
     "import pandas as pd\n",
     "\n",
     "iters = list(range(1000))\n",
-    "df = pd.DataFrame(iters)\n",
-    "len(iters)"
+    "df = pd.DataFrame(iters,clum"
    ]
   },
   {
