Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -115,7 +115,7 @@
     "import pandas as pd\n",
     "\n",
     "iters = list(range(1000))\n",
-    "df = pd.DataFrame(iters,clum"
+    "df = pd.DataFrame(iters,columns='Iteration',axis=1"
    ]
   },
   {
