--- a/index.ipynb
+++ b/index.ipynb
@@ -176,7 +176,7 @@
     }
    ],
    "source": [
-    "applied_df = df.apply(lambda x: monty_hall(x))"
+    "applied_df = df.apply(lambda x: monty_hall(x),axis='columns',results)"
    ]
   },
   {
