Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -176,7 +176,7 @@
     }
    ],
    "source": [
-    "applied_df = df.apply(lambda x: monty_hall(x),axis='columns',results)"
+    "applied_df = df.apply(lambda x: monty_hall(x),axis='columns',result_type='expand')"
    ]
   },
   {
