Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -38,6 +38,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    #Step 1: Car is placed behind a random door\n",
+    "    car_loc = [random.randint(1,3)]\n",
+    "    print('Car Location: ' + str(car_loc))\n",
+    "\n",
+    "    #Step 2: Player selects a door\n",
+    "    player_choice = set([random.randint(1,3)])\n",
+    "    print('Player''s Choice: '+ str(player_choice))\n",
+    "\n",
+    "    #Step 3: Host selects a door revealing a goat that's \n",
+    "    #not the player's door\n",
+    "    goat_locs = list(set(car_loc)^set(all_doors))\n",
+    "\n",
+    "    if player_choice.issubset(set(car_loc)):\n",
+    "        #pick either of the goat doors if the player chose the car\n",
+    "        reveal_idx = random.randint(0,1)\n",
+    "        reveal_loc = goat_locs[reveal_idx]\n",
+    "\n",
+    "    else:\n",
+    "        #pick the door that the player didn't choose and the one that is not the car\n",
+    "        reveal_loc = all_doors^(player_choice.union(set(car_loc)))\n",
+    "\n",
+    "    print('Host Opens: ' + str(reveal_loc))\n",
+    "\n",
+    "\n",
+    "    #Step 4: Host gives player option to stay or switch doors\n",
+    "    #Step 4a: player stays\n",
+    "    if player_choice.issubset(set(car_loc)):\n",
+    "        stay_win = 1\n",
+    "    else:\n",
+    "        stay_win = 0\n",
+    "\n",
+    "    #Step 4b: player switches\n",
+    "    new_player_choice = all_doors^(player_choice.union(reveal_loc))\n",
+    "    #print(new_player_choice)\n",
+    "\n",
+    "    if new_player_choice.issubset(set(car_loc)):\n",
+    "        switch_win = 1\n",
+    "    else:\n",
+    "        switch_win = 0\n",
+    "        \n",
+    "    print('New Player Choice: ' + str(new_player_choice))\n",
+    "    print('Outcome Stayed: ' + str(stay_win))\n",
+    "    print('Outcome Switched: ' + str(switch_win))    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [],
