--- a/index.ipynb
+++ b/index.ipynb
@@ -38,10 +38,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Car Location: [2]\n",
+      "Players Choice: {3}\n",
+      "Host Opens: {1}\n",
+      "New Player Choice: {2}\n",
+      "Outcome Stayed: 0\n",
+      "Outcome Switched: 1\n"
+     ]
+    }
+   ],
    "source": [
+    "import random\n",
+    "all_doors = set([1,2,3])\n",
     "\n",
     "#Step 1: Car is placed behind a random door\n",
     "car_loc = [random.randint(1,3)]\n",
