Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -38,27 +38,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Car Location: [3]\n",
-      "Players Choice: {3}\n",
-      "Host Opens: 1\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-39-c107fac52a6f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;31m#Step 4b: player switches\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m \u001b[0mnew_player_choice\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mall_doors\u001b[0m\u001b[0;34m^\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplayer_choice\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreveal_loc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m \u001b[0;31m#print(new_player_choice)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
+      "Car Location: [2]\n",
+      "Players Choice: {1}\n",
+      "Host Opens: {3}\n",
+      "New Player Choice: {2}\n",
+      "Outcome Stayed: 0\n",
+      "Outcome Switched: 1\n"
      ]
     }
    ],
@@ -81,7 +73,7 @@
     "if player_choice.issubset(set(car_loc)):\n",
     "    #pick either of the goat doors if the player chose the car\n",
     "    reveal_idx = random.randint(0,1)\n",
-    "    reveal_loc = goat_locs[reveal_idx]\n",
+    "    reveal_loc = set(goat_locs[reveal_idx])\n",
     "\n",
     "else:\n",
     "    #pick the door that the player didn't choose and the one that is not the car\n",
